fix: input para o tipo password

--- a/popup.html
+++ b/popup.html
@@ -29,7 +29,7 @@
         <div class="item">
             <div class="field">
                 <div class="control has-icons-left">
-                  <input class="input is-medium" type="text" placeholder="SENHA">
+                  <input class="input is-medium" type="password" placeholder="SENHA">
                   <span class="icon is-small is-left">
                     <i class="fa-solid fa-lock"></i>
                   </span>
