feat: criacao do servicos base de requisicoes

--- a/popup.html
+++ b/popup.html
@@ -46,7 +46,7 @@
             </button>
         </div>
     </div>
-    <script src="popup.js"></script>
+    <script type="module" src="popup.js"></script>
     <script src="js/all.min.js"></script>
 </body>
 </html>
