feat - ajustes de nomenclatura, script e coleta de informacoes de login

--- a/popup.html
+++ b/popup.html
@@ -18,7 +18,7 @@
         <div class="item">
             <div class="field">
                 <div class="control has-icons-left">
-                  <input class="input is-medium" type="text" placeholder="EMAIL">
+                  <input id="user" class="input is-medium" type="text" placeholder="EMAIL">
                   <span class="icon is-small is-left">
                     <i class="fa-solid fa-at"></i>
                   </span>
@@ -29,7 +29,7 @@
         <div class="item">
             <div class="field">
                 <div class="control has-icons-left">
-                  <input class="input is-medium" type="password" placeholder="SENHA">
+                  <input id="password" class="input is-medium" type="password" placeholder="SENHA">
                   <span class="icon is-small is-left">
                     <i class="fa-solid fa-lock"></i>
                   </span>
