feat: criacao da tela de status no popup

--- a/src/pages/popup/popup.html
+++ b/src/pages/popup/popup.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <form class="container" id="authForm">
-        <div id="popup" class="item">
+        <div class="item">
             <div id="logo">
                 <img src="/images/logo-white.png">
             </div>
@@ -46,6 +46,24 @@
             </button>
         </div>
     </form>
+
+    <form class="container" id="painelForm">
+        <div class="item">
+            <h1>BENDITA EMPADA</h1>            
+        </div>
+        <div>
+            <h2 class="isConnected">CONECTADO</h2>
+        </div>
+        <div class="item buttons">
+            <button id="button-logout" value="Submit" form="painelForm" class="button is-info is-light is-medium">
+                <span>SAIR</span> 
+                <span class="icon is-small"> 
+                    <i class="fa-solid fa-right-to-bracket"></i>
+                </span> 
+            </button>
+        </div>        
+    </form>
+
     <script type="module" src="popup.js"></script>
     <script src="../../../libs/all.min.js"></script>
 </body>
