--- a/src/pages/popup/popup.html
+++ b/src/pages/popup/popup.html
@@ -38,6 +38,7 @@
             </div>
         </div>
         <div class="item buttons">
+            <p class="help is-danger" id="errorMsg"></p>
             <button id="button-login" value="Submit" form="authForm" class="button is-info is-light is-medium">
                 <span>AUTENTICAR</span> 
                 <span class="icon is-small"> 
