inicio da pagina options

--- a/src/pages/popup/popup.html
+++ b/src/pages/popup/popup.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../../../css/bulma.min.css">
     <link rel="stylesheet" href="../../../css/all.min.css">
     <link rel="stylesheet" href="../../../css/principal.css">
+    <link rel="stylesheet" href="popup.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;500;600&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 </head>
