feat e refactor: ajustes visuais no option e no popup e adicao de atalho para abrir as duas janelas da extensao

--- a/src/pages/options/options.html
+++ b/src/pages/options/options.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Configurações</title>
+    <title>Notifyer Connect</title>
     <link rel="stylesheet" href="../../../css/bulma.min.css">
     <link rel="stylesheet" href="../../../css/all.min.css">
     <link rel="stylesheet" href="../../../css/principal.css">
