--- a/src/pages/popup/popup.html
+++ b/src/pages/popup/popup.html
@@ -39,7 +39,6 @@
             </div>
         </div>
         <div class="item buttons">
-            <p class="help is-danger" id="errorMsg"></p>
             <button id="button-login" value="Submit" form="authForm" class="button is-info is-light is-medium">
                 <span>AUTENTICAR</span> 
                 <span class="icon is-small"> 
@@ -47,6 +46,9 @@
                 </span> 
             </button>
         </div>
+        <article id="errorDiv" class="message is-danger">
+            <div id="errorMsg" class="message-body"></div>
+        </article>
     </form>
 
     <form class="container" id="painelForm">
