feat: finalizacao do popup page com login e logout, e inicio da organizao do template do option page

--- a/src/pages/options/options.html
+++ b/src/pages/options/options.html
@@ -21,7 +21,7 @@
                             <img src="/images/logo-white.png">
                         </div>
                     </div>
-                    <div class="column">
+                    <div id="company-info" class="column">
                         <div class="is-align-content-center">
                             <h1 class="title">
                                 BENDITA EMPADA
@@ -129,7 +129,7 @@
         </div>
     </footer>
 
-    <script src="options.js"></script>
+    <script type="module" src="options.js"></script>
     <script src="../../../libs/all.min.js"></script>
   </body>
 </html>
