feat: continuacao da construcao e estilizacao da tela de options

--- a/src/pages/popup/popup.html
+++ b/src/pages/popup/popup.html
@@ -53,14 +53,14 @@
 
     <form class="container" id="painelForm">
         <div class="item">
-            <h1>BENDITA EMPADA</h1>            
+            <h1>CEARÁ LANCHES</h1>            
         </div>
         <div>
-            <h2 class="isConnected">CONECTADO</h2>
+            <h2 class="isConnected">USUÁRIO AUTENTICADO</h2>
         </div>
-        <div class="item buttons">
-            <button id="button-logout" value="Submit" form="painelForm" class="button is-info is-light is-medium">
-                <span>SAIR</span> 
+        <div class="item buttons" style="margin-top: 1rem;">
+            <button id="openOptionsPageButton" value="Submit" form="painelForm" class="button is-info is-light is-medium">
+                <span>ABRIR PAINEL</span> 
                 <span class="icon is-small"> 
                     <i class="fa-solid fa-right-to-bracket"></i>
                 </span> 
