feat: agora a tela de login do option e popup estao em sincronia

--- a/src/pages/options/options2.html
+++ b/src/pages/options/options2.html
@@ -43,7 +43,7 @@
                     <div class="right">
                         <label class="dark-mode ml-auto">
                             <input type="checkbox" checked>
-                            <span></span>
+                            <span id="toogle-theme"></span>
                         </label>
                     </div>
                 </div>
@@ -384,7 +384,6 @@
     <!-- Concatenated plugins -->
     <script src="../assets/js/app.js"></script>
     <script type="module" src="./options.js"></script>
-    <script src="../assets/js/app.js"></script>
     
     <!-- Huro js -->
     <script src="../assets/js/functions.js"></script>
